--- a/Projeto39-Password-Strength-Background/styles.css
+++ b/Projeto39-Password-Strength-Background/styles.css
@@ -1,4 +1,8 @@
-body {
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,15 +10,16 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
-}
-
-.background {
-    background: url('https://images.unsplash.com/photo-1556745757-8d76bdb6984b') no-repeat center center/cover;
+  }
+  
+  .background {
+    background: url('https://images.unsplash.com/photo-1556745757-8d76bdb6984b')
+      no-repeat center center/cover;
     position: absolute;
     top: -20px;
     bottom: -20px;
     left: -20px;
     right: -20px;
     z-index: -1;
-    filter: blur(20px)
-}
+    filter: blur(20px);
+  }
